Criação de Novas Classes e Funções
Correção de erros na view 'WindowResult', modificações no SQLite, criamos classe para a conexão com a API, alterações na Classe 'Makeup' e outras providências

Co-Authored-By: Guilherme Palma <54846154+guilhermepalma@users.noreply.github.com>

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,21 +6,6 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <EditText
-        android:id="@+id/edit_type2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:autofillHints=""
-        android:ems="10"
-        android:hint="@string/edit_marca"
-        android:inputType="textPersonName"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.61" />
-
     <TextView
         android:id="@+id/txt_title"
         android:layout_width="wrap_content"
@@ -32,6 +17,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.139" />
+
+    <ImageView
+        android:id="@+id/image_makeup"
+        android:layout_width="269dp"
+        android:layout_height="161dp"
+        android:contentDescription="@string/img_makeup"
+        app:layout_constraintBottom_toTopOf="@+id/edit_type"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txt_title"
+        app:srcCompat="@drawable/make" />
 
     <EditText
         android:id="@+id/edit_type"
@@ -45,29 +41,32 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.514" />
+        app:layout_constraintVertical_bias="0.51" />
 
-    <ImageView
-        android:id="@+id/image_makeup"
-        android:layout_width="269dp"
-        android:layout_height="161dp"
-        android:contentDescription="@string/img_makeup"
-        app:layout_constraintBottom_toTopOf="@+id/edit_type"
+    <EditText
+        android:id="@+id/edit_brand"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:autofillHints=""
+        android:ems="10"
+        android:hint="@string/edit_marca"
+        android:inputType="textPersonName"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_title"
-        app:srcCompat="@drawable/make" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.62" />
 
     <Button
         android:id="@+id/btn_search"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="Open"
+        android:onClick="LoadResult"
         android:text="@string/btn_search"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edit_type2"
+        app:layout_constraintTop_toBottomOf="@+id/edit_brand"
         app:layout_constraintVertical_bias="0.19" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
