--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -70,4 +70,10 @@
         app:layout_constraintTop_toBottomOf="@+id/edit_brand"
         app:layout_constraintVertical_bias="0.19" />
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingTop="600sp"
+        tools:listitem="@layout/layout_result" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
