--- a/app/src/main/res/layout/layout_result.xml
+++ b/app/src/main/res/layout/layout_result.xml
@@ -24,9 +24,9 @@
                     android:paddingRight="5sp">
 
                     <ImageView
-                        android:id="@+id/img1"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:id="@+id/img"
+                        android:layout_width="0dp"
+                        android:layout_height="150dp"
                         android:layout_marginStart="16dp"
                         android:layout_marginLeft="16dp"
                         android:layout_marginTop="16dp"
@@ -34,7 +34,7 @@
                         android:layout_marginRight="15dp"
                         android:layout_marginBottom="59dp"
                         app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toStartOf="@+id/product_name1"
+                        app:layout_constraintEnd_toStartOf="@+id/product_name"
                         app:layout_constraintHorizontal_bias="0.0"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
@@ -42,7 +42,7 @@
                         tools:srcCompat="@tools:sample/avatars" />
 
                     <TextView
-                        android:id="@+id/product_name1"
+                        android:id="@+id/product_name"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="TextView"
@@ -55,7 +55,7 @@
                         app:layout_constraintVertical_bias="0.144" />
 
                     <TextView
-                        android:id="@+id/currency_price1"
+                        android:id="@+id/currency_price"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="TextView"
@@ -63,13 +63,13 @@
                         android:textStyle="bold"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintHorizontal_bias="0.062"
-                        app:layout_constraintStart_toEndOf="@+id/img1"
+                        app:layout_constraintHorizontal_bias="0.082"
+                        app:layout_constraintStart_toEndOf="@+id/img"
                         app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintVertical_bias="0.33999997" />
+                        app:layout_constraintVertical_bias="0.343" />
 
                     <TextView
-                        android:id="@+id/type_brand1"
+                        android:id="@+id/type_brand"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="TextView"
@@ -82,17 +82,17 @@
                         app:layout_constraintVertical_bias="0.53" />
 
                     <TextView
-                        android:id="@+id/description1"
+                        android:id="@+id/description"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="TextView"
                         android:textSize="16sp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintHorizontal_bias="0.055"
-                        app:layout_constraintStart_toEndOf="@+id/img1"
+                        app:layout_constraintHorizontal_bias="0.074"
+                        app:layout_constraintStart_toEndOf="@+id/img"
                         app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintVertical_bias="0.713" />
+                        app:layout_constraintVertical_bias="0.709" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
