--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,9 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        tools:layout_editor_absoluteX="-178dp"
+        tools:layout_editor_absoluteY="-59dp">
 
         <TextView
             android:id="@+id/txt_title"
@@ -25,89 +27,94 @@
 
         <ImageView
             android:id="@+id/image_makeup"
-            android:layout_width="269dp"
-            android:layout_height="161dp"
+            android:layout_width="200dp"
+            android:layout_height="130dp"
+            android:layout_marginTop="8dp"
             android:contentDescription="@string/img_makeup"
-            app:layout_constraintBottom_toTopOf="@+id/edit_type"
+            android:foregroundGravity="center_vertical|center|center_horizontal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/recyclerView"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.78"
+            app:layout_constraintTop_toBottomOf="@+id/txt_title"
             app:srcCompat="@drawable/make" />
 
         <EditText
             android:id="@+id/edit_type"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
             android:autofillHints=""
             android:ems="10"
             android:hint="@string/edit_type"
             android:inputType="textPersonName"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.413" />
+            app:layout_constraintTop_toBottomOf="@+id/image_makeup" />
 
         <EditText
             android:id="@+id/edit_brand"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
             android:autofillHints=""
             android:ems="10"
             android:hint="@string/edit_marca"
             android:inputType="textPersonName"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/edit_type"
-            app:layout_constraintVertical_bias="0.029999971" />
+            app:layout_constraintTop_toBottomOf="@+id/edit_type" />
 
         <Button
             android:id="@+id/btn_search"
             android:layout_width="150dp"
             android:layout_height="60dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="40dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
             android:onClick="LoadResult"
             android:text="@string/btn_search"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/btn_clear"
-            app:layout_constraintHorizontal_bias="0.766"
+            app:layout_constraintHorizontal_bias="0.47"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/edit_brand"
-            app:layout_constraintVertical_bias="0.14999998" />
+            app:layout_constraintTop_toBottomOf="@+id/edit_brand" />
 
         <Button
             android:id="@+id/btn_clear"
             android:layout_width="150dp"
             android:layout_height="60dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginTop="40dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginRight="16dp"
             android:onClick="BtnClear"
             android:text="@string/clear_bd"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.81"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/edit_brand"
-            app:layout_constraintVertical_bias="0.14999998" />
+            app:layout_constraintStart_toEndOf="@+id/btn_search"
+            app:layout_constraintTop_toBottomOf="@+id/edit_brand" />
 
         <TextView
             android:id="@+id/txt_result"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/string_empty"
+            android:layout_marginTop="52dp"
+            android:text="@string/app_name"
             android:textSize="25sp"
-            app:layout_constraintBottom_toBottomOf="@+id/recyclerView"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.484"
             app:layout_constraintStart_toStartOf="@+id/recyclerView"
-            app:layout_constraintTop_toBottomOf="@+id/edit_brand"
-            app:layout_constraintVertical_bias="0.43" />
+            app:layout_constraintTop_toBottomOf="@+id/btn_search" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:paddingTop="620sp"
-            tools:layout_editor_absoluteX="-37dp"
-            tools:layout_editor_absoluteY="16dp"
+            android:layout_width="427dp"
+            android:layout_height="233dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/txt_result"
+            app:layout_constraintVertical_bias="1.0"
             tools:listitem="@layout/layout_result" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
